chore: some more stuff

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                             <a class="nav-link" href="#vision">Vision</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#media">Media</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contactus">Contact</a>
                         </li>
                     </ul>
@@ -55,7 +58,6 @@
                         <h1 class="display-4">Digital Library</h1>
                         <p class="lead">Currently working on provisioning a digital library to the community to enrich the knowledge and
                             information for those in need</p>
-                        <a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
                         </p>
                     </div>
                     <!-- <div class="card">
@@ -225,8 +227,59 @@
         </div>
     </section>
     <section id="media">
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://youtube.com/embed/dXsU2Usi5To" allowfullscreen></iframe>
+        <div class="container">
+            <h3>Gallery</h3>
+            <div class="row">
+                <div class="col-lg-4" id="media-item">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://youtube.com/embed/dXsU2Usi5To" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-4" id="media-item">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://youtube.com/embed/lkDLgLepC4I" allowfullscreen></iframe>
+                        </div>
+                </div>
+                <div class="col-lg-4" id="media-item">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://youtube.com/embed/hDvMb9QbyXE" allowfullscreen></iframe>
+                        </div>
+                </div>
+            </div>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/community-help/corona-help-1.jpeg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/Inagala-Chandra-1.jpeg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/Inagala-Chandra-2.jpeg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/Inagala-Chandra-3.jpeg" alt="Fourth slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/others-1.jpeg" alt="Fifth slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/others-2.jpeg" alt="Sixth slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/others-3.jpeg" alt="Seventh slide">
+                    </div>
+                    <div class="carousel-item">
+                            <img class="d-block w-100" src="images/community-help/others-4.jpeg" alt="Eight slide">
+                    </div>
+                    <div class="carousel-item">
+                            <img class="d-block w-100" src="images/community-help/others-5.jpeg" alt="Nine slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/community-help/others-6.jpeg" alt="Ten slide">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <h3>Partners</h3>
@@ -239,91 +292,95 @@
     </section>
 
     <section class="contact us" id="contactus">
-            <div class="jumbotron jumbotron-sm" id="jumbotron-contactus">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12 col-lg-12">
-                                <h3>
-                                    Contact us <small>Feel free to contact us</small></h3>
-                            </div>
-                        </div>
+        <div class="jumbotron jumbotron-sm" id="jumbotron-contactus">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12">
+                        <h3>
+                            Contact us
+                            <small>Feel free to contact us</small>
+                        </h3>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="well well-sm">
-                                <form>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="name">
-                                                Name</label>
-                                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="email">
-                                                Email Address</label>
-                                            <div class="input-group">
-                                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                                </span>
-                                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="subject">
-                                                Subject</label>
-                                            <select id="subject" name="subject" class="form-control" required="required">
-                                                <option value="na" selected="">Choose One:</option>
-                                                <option value="service">General enquiry</option>
-                                                <option value="suggestions">Suggestions</option>
-                                                <option value="product">Support</option>
-                                            </select>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="well well-sm">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="name">
+                                            Name</label>
+                                        <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">
+                                            Email Address</label>
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-envelope"></span>
+                                            </span>
+                                            <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" />
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="name">
-                                                Message</label>
-                                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                                placeholder="Message"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-                                            Send Message</button>
+                                    <div class="form-group">
+                                        <label for="subject">
+                                            Subject</label>
+                                        <select id="subject" name="subject" class="form-control" required="required">
+                                            <option value="na" selected="">Choose One:</option>
+                                            <option value="service">General enquiry</option>
+                                            <option value="suggestions">Suggestions</option>
+                                            <option value="product">Support</option>
+                                        </select>
                                     </div>
                                 </div>
-                                </form>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="name">
+                                            Message</label>
+                                        <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required" placeholder="Message"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
+                                        Send Message</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <form>
-                            <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
-                            <address>
-                                <strong>IPPA, Org</strong><br>
-                                 1234567890 <br>
-                                 Ipurupalem,<br>
-                                 Andhra Pradesh
-                            </address>
-                            <address>
-                                <strong>Email</strong><br>
-                                <a href="mailto:#">ippa.org@gmail.com</a>
-                            </address>
-                            </form>
-                        </div>
+                        </form>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <form>
+                        <legend>
+                            <span class="glyphicon glyphicon-globe"></span> Our office</legend>
+                        <address>
+                            <strong>IPPA, Org</strong>
+                            <br> 1234567890
+                            <br> Ipurupalem,
+                            <br> Andhra Pradesh
+                        </address>
+                        <address>
+                            <strong>Email</strong>
+                            <br>
+                            <a href="mailto:#">ippaorganization@gmail.com</a>
+                        </address>
+                    </form>
+                </div>
+            </div>
+        </div>
 
-                <div class="container" id="social-media-links">
-                    <div class="row">
-                        <div class="class-lg-5 5x">
-                            <a id="social-media-link" href=""><i class="fab fa-facebook"></i></a>
-                        </div>
-                        <div class="class-lg-5">
-                                <a id="social-media-link" href=""><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
+        <div class="container" id="social-media-links">
+            <div class="row">
+                <div class="class-lg-5">
+                    <a id="social-media-link" href="https://www.facebook.com/IPPA-Organization-103034451742237">
+                        <i class="fab fa-facebook"></i>
+                    </a>
                 </div>
+            </div>
+        </div>
     </section>
 
 </body>
