--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
 <body>
     <section id="title">
+            <div class="alert-banner align-center bg-accent pad-vert-base">
+                <a class="color-blue blink_me" href="pages/digital_library.html" target="_self" style="text-decoration: none; color: white">
+                    <i class="far fa-bell"></i>
+                    <span>Digital Library <span class="arrow no-wrap">for readers and learners</span></span></a></div>
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-md navbar-dark">
+            <nav class="navbar navbar-expand-md">
                 <!-- <a class="navbar-brand" style="color: white; font-size: 2.5rem;">IPPA</a> -->
                 <img class="navbar-brand" style="width: 10%; height: 10%; border-radius: 100%" src="images/IPPA-Logo.jpeg" />
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
@@ -48,8 +52,8 @@
                     </ul>
                 </div>
             </nav>
-            <div id="accordion">
-                <a class="btn btn-primary btn-light" style="text-decoration: none" data-toggle="collapse" href="#collapseExample" aria-expanded="false"
+            <!-- <div id="accordion">
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" aria-expanded="false"
                     aria-controls="collapseExample">
                     <i class="fas fa-bullhorn"></i> Digital Library
                 </a>
@@ -59,7 +63,7 @@
                         <p class="lead">Currently working on provisioning a digital library to the community to enrich the knowledge and
                             information for those in need</p>
                         </p>
-                    </div>
+                    </div> -->
                     <!-- <div class="card">
                     <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
@@ -74,7 +78,7 @@
                             Currently working on provisioning a digital library to the community to enrich the knowledge and information for those in need
                     </div>
                 </div> -->
-                </div>
+                <!-- </div> -->
                 <!-- <a class="btn btn-primary btn-light" style="text-decoration: none" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 <i class="fas fa-bullhorn"></i> Digital Library
             </a>
@@ -150,6 +154,7 @@
               }
           </script> -->
     </section>
+    <hr class="blink_me"/>
     <!-- <section id="features">
             <div class="row">
                 <div class="feature-box col-lg-4">
@@ -183,7 +188,7 @@
             </div>
         </div>
     </section>
-    <hr/>
+    <hr class="blink_me"/>
     <section id="vision">
         <div class="container-fluid">
             <div class="row">
@@ -193,8 +198,9 @@
             </div>
         </div>
     </section>
-
+    <hr class="blink_me"/>
     <section id="testimonials">
+        <div class="container-fluid">
         <div id="testimonial" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -225,7 +231,9 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        </div>
     </section>
+    <hr class="blink_me"/>
     <section id="media">
         <div class="container">
             <h3>Gallery</h3>
@@ -236,14 +244,14 @@
                     </div>
                 </div>
                 <div class="col-lg-4" id="media-item">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://youtube.com/embed/lkDLgLepC4I" allowfullscreen></iframe>
-                        </div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://youtube.com/embed/lkDLgLepC4I" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="col-lg-4" id="media-item">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://youtube.com/embed/hDvMb9QbyXE" allowfullscreen></iframe>
-                        </div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://youtube.com/embed/hDvMb9QbyXE" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -270,10 +278,10 @@
                         <img class="d-block w-100" src="images/community-help/others-3.jpeg" alt="Seventh slide">
                     </div>
                     <div class="carousel-item">
-                            <img class="d-block w-100" src="images/community-help/others-4.jpeg" alt="Eight slide">
+                        <img class="d-block w-100" src="images/community-help/others-4.jpeg" alt="Eight slide">
                     </div>
                     <div class="carousel-item">
-                            <img class="d-block w-100" src="images/community-help/others-5.jpeg" alt="Nine slide">
+                        <img class="d-block w-100" src="images/community-help/others-5.jpeg" alt="Nine slide">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="images/community-help/others-6.jpeg" alt="Ten slide">
@@ -282,7 +290,8 @@
             </div>
         </div>
     </section>
-    <h3>Partners</h3>
+    <hr class="blink_me"/>
+    <h3 style="text-align: center">Partners</h3>
     <section id="partners">
         <div class="row">
             <div class="col-lg-3">
@@ -290,7 +299,7 @@
             </div>
         </div>
     </section>
-
+    <hr class="blink_me"/>
     <section class="contact us" id="contactus">
         <div class="jumbotron jumbotron-sm" id="jumbotron-contactus">
             <div class="container">
@@ -345,10 +354,11 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
+                                    <button type="submit" class="btn btn-primary pull-right" id="btnContactUs" onclick="sendEmail()">
                                         Send Message</button>
                                 </div>
                             </div>
+                            <p id="mailStatus"></p>
                         </form>
                     </div>
                 </div>
@@ -374,15 +384,23 @@
 
         <div class="container" id="social-media-links">
             <div class="row">
-                <div class="class-lg-5">
-                    <a id="social-media-link" href="https://www.facebook.com/IPPA-Organization-103034451742237">
+                <div>
+                    <a id="social-media-link" href="https://www.facebook.com/IPPA-Organization-103034451742237" class="center">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </div>
             </div>
+            <div class="grid-flex-at-medium">
+                    <div class="column expand align-center align-left-at-medium">
+                        <p class="copyright">© 2021 IPPA Organization Ltd.</p>
+                    </div>
+            </div>
         </div>
     </section>
-
+    <!-- <div>
+        <div class="flash-message">We use cookies to improve and customise our services. By using Square, you agree to our use of cookies. To learn more about cookies and how to change your settings, <a id="cookie-learn-more" href="/gb/legal/privacy#cookies">view our privacy policy</a>.</div>
+        <button class="flash-close">Close</button>
+    </div> -->
 </body>
 
 </html>
