chore: fix hamburger navbar toggler color in mobile view

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
                     <span>Digital Library <span class="arrow no-wrap">for readers and learners</span></span></a></div>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-md">
-                <!-- <a class="navbar-brand" style="color: white; font-size: 2.5rem;">IPPA</a> -->
                 <img class="navbar-brand" style="width: 10%; height: 10%; border-radius: 100%" src="images/IPPA-Logo.jpeg" />
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarTogglerDemo02">
                     <ul class="nav navbar-nav navbar-right ml-auto">
@@ -381,22 +380,15 @@
                 </div>
             </div>
         </div>
-
-        <div class="container" id="social-media-links">
-            <div class="row">
-                <div>
-                    <a id="social-media-link" href="https://www.facebook.com/IPPA-Organization-103034451742237" class="center">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="grid-flex-at-medium">
-                    <div class="column expand align-center align-left-at-medium">
-                        <p class="copyright">© 2021 IPPA Organization Ltd.</p>
-                    </div>
-            </div>
-        </div>
     </section>
+    <footer class="footer-section" id="footer">
+        <div class="container-fluid" id="social-media-links">
+            <a id="social-media-link" href="https://www.facebook.com/IPPA-Organization-103034451742237" class="center">
+                <i class="fab fa-facebook fa-5x"></i>
+            </a>
+            <p class="copyright">© 2021 IPPA Organization Ltd.</p>    
+        </div>
+    </footer>
     <!-- <div>
         <div class="flash-message">We use cookies to improve and customise our services. By using Square, you agree to our use of cookies. To learn more about cookies and how to change your settings, <a id="cookie-learn-more" href="/gb/legal/privacy#cookies">view our privacy policy</a>.</div>
         <button class="flash-close">Close</button>
